# banking_application

./: .env.template  README.md  pyproject.toml
data/: operations.xlsx
htmlcov/: index.html
src/: decorator.py  external_api.py  main.py  processing.py  readers.py  reports.py  services.py  utils.py  views.py  writer.py
tests/: conftest.py  test_decorator.py  test_external_api.py  test_main.py  test_processing.py  test_readers.py  test_reports.py  test_services.py  test_utils.py  test_views.py  test_writer.py
